fixed issue with h3's on home page and spacing on footer

--- a/css/index.css
+++ b/css/index.css
@@ -330,7 +330,7 @@ footer .left h2 {
   }
 }
 footer .left .second {
-  margin: 0;
+  margin: 1% 0 5%;
   padding: 0 12.5%;
   text-align: left;
 }
@@ -577,29 +577,47 @@ footer h5 {
     right: 5%;
   }
 }
-.home .top h3 {
+.home .outside h3 {
   font-weight: normal;
   font-size: 2.4rem;
   color: #222222;
   letter-spacing: 0.5rem;
+  text-align: center;
   background: #d8d8d8;
   padding: 2.5%;
-  width: 25.5%;
+  width: 35%;
   position: absolute;
-  right: 0;
   bottom: 0;
+  right: 0;
 }
 @media (max-width: 800px) {
-  .home .top h3 {
-    bottom: -20%;
-    left: 0%;
+  .home .outside h3 {
+    bottom: -15%;
     width: 100%;
     text-align: center;
     padding: 7.5%;
   }
 }
-.home .top .middle h3 {
+.home .middle h3 {
+  font-weight: normal;
+  font-size: 2.4rem;
+  color: #222222;
+  letter-spacing: 0.5rem;
+  text-align: center;
+  background: #d8d8d8;
+  padding: 2.5%;
+  width: 35%;
+  position: absolute;
+  bottom: 0;
   left: 0;
+}
+@media (max-width: 800px) {
+  .home .middle h3 {
+    bottom: -15%;
+    width: 100%;
+    text-align: center;
+    padding: 7.5%;
+  }
 }
 .top-area {
   position: relative;
