--- a/less/homepage.less
+++ b/less/homepage.less
@@ -69,14 +69,14 @@
     }
 
     .content {
-        .width-height(47.5%, auto);
-        @media @mobile {
-          width: 100%;
-        }
-        h2 {
-          .margin-padding(0 0 5%, 0);
-        }
-      }    
+      .width-height(47.5%, auto);
+      @media @mobile {
+        width: 100%;
+      }
+      h2 {
+        .margin-padding(0 0 5%, 0);
+      }
+    }
     .top-section {
       .flex-box(row nowrap, space-between, center);
       .margin-padding(0 0 5%, 0);
@@ -140,20 +140,34 @@
         right: 5%;
       }
     }
+  }
+  .outside {
     h3 {
       .h3();
+      position: absolute;
+      bottom: 0;
+      right: 0;
+
       @media @mobile {
-        bottom: -20%;
-        left: 0%;
+        bottom: -15%;
         width: 100%;
         text-align: center;
         padding: 7.5%;
       }
     }
+  }
+  .middle {
+    h3 {
+      .h3();
+      position: absolute;
+      bottom: 0;
+      left: 0;
 
-    .middle {
-      h3 {
-        left: 0;
+      @media @mobile {
+        bottom: -15%;
+        width: 100%;
+        text-align: center;
+        padding: 7.5%;
       }
     }
   }
