--- a/less/mixins.less
+++ b/less/mixins.less
@@ -22,12 +22,10 @@
   font-size: 2.4rem;
   color: @black;
   letter-spacing: 0.5rem;
+  text-align: center;
   background: @gray;
   padding: 2.5%;
-  width: 25.5%;
-  position: absolute;
-  right: 0;
-  bottom: 0;
+  width: 35%;
 }
 
 .footer-headings() {
